--- a/review_paper/1. Overview.md
+++ b/review_paper/1. Overview.md
@@ -1,15 +1,24 @@
 # Tổng quan về cấu trúc `Transformer`
 
-## 1. Mô hình Transformer được sử dụng thế nào?
+## 1. Mô hình Transformer?
 
-Kiến trúc Transformer xử lý tốt các dữ liệu dạng văn bản có tính tuần tự, VD: Dịch từ Tiếng Anh sang Tiếng Việt
+- **Kiến trúc Transformer**
+
 <p align="center">
-    <img src="F:\8. BERTSum\BERTSum\assets\Base_1.png" width="400">
+    <img src="F:\8. Transformers\Seq2SeqWithTransformer\assets\Base_1.png" width="500">
 </p> 
 
-Trong một `Transformer` có 2 thành phần chính: Encode layers và Decode Layer
+- **Encode Block vs Decode Block**
 
+<p align="center">
+    <img src="F:\8. Transformers\Seq2SeqWithTransformer\assets\Base_2.png" width="500">
+</p> 
 
+- **Encode Layer vs Decode Layer:**
+
+<p align="center">
+    <img src="F:\8. Transformers\Seq2SeqWithTransformer\assets\Base_3.png" width="500">
+</p> 
 
 ## 2. So sánh Transformer với mô hình RNN truyền thống.
 
@@ -18,3 +27,7 @@ Trong một `Transformer` có 2 thành phần chính: Encode layers và Decode L
 ## 4. Huấn luyện mô hình
 
 ## 5. Quá trình khởi chạy mô hình
+
+## 6. Tham khảo
+1. [Attention is all you need](https://arxiv.org/pdf/1706.03762.pdf)
+2. [Transformer Explaintation](https://towardsdatascience.com/transformers-explained-visually-part-1-overview-of-functionality-95a6dd460452)
